Overflow fix on mobile version

--- a/src/styles/how-it-works.scss
+++ b/src/styles/how-it-works.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .how-it-works-page {
@@ -127,10 +127,6 @@
 
   .container {
     max-width: 720px !important;
-  }
-
-  .row {
-    overflow-x: visible;
   }
 }
 
